--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -12,14 +12,25 @@ img {
   font-weight: 900;
   display: flex;
   justify-content: center;
+  margin-bottom: 32px;
 }
 
 .plants {
   display: flex;
   justify-content: center;
+  gap: 52px;
 }
 
+.plant {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  width: 200px;
+}
 
+.text {
+  text-align: center;
+}
 
 /* do not edit this footer */
 .footer {
