--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,8 +11,6 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  display: flex;
-  justify-content: center;
   margin-bottom: 32px;
 }
 
@@ -22,14 +21,7 @@ img {
 }
 
 .plant {
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-  width: 200px;
-}
-
-.text {
-  text-align: center;
+  max-width: 200px;
 }
 
 /* do not edit this footer */
