Added css for header separating the left links from the right links

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -9,6 +9,12 @@ body {
   flex-direction: column;
 }
 
+.header {
+  display: flex;
+  padding: 16px;
+  justify-content: space-between;
+}
+
 ul {
   list-style-type: none;
   display: flex;
