--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -15,6 +15,12 @@ body {
   justify-content: space-between;
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 ul {
   list-style-type: none;
   display: flex;
