Added css for footer separating the left links from the right links and changing the background color

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -9,10 +9,14 @@ body {
   flex-direction: column;
 }
 
-.header {
+.header, .footer {
   display: flex;
   padding: 16px;
   justify-content: space-between;
+}
+
+.footer {
+  background-color: #eeeeee;
 }
 
 .content {
