Added css for content to center content vertically and to put footer at the bottom of the page

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -22,7 +22,9 @@ body {
 .content {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  flex: 1 1 auto;
 }
 
 ul {
